<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/header_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp10"
            android:orientation="vertical"
            android:padding="@dimen/dp20">

            <RelativeLayout
                android:id="@+id/rl_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp5">

                <com.app.trendipeople.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp5"
                    android:text="@string/my_profile"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_15" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow_blue" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/view_color" />

            <RelativeLayout
                android:id="@+id/rl_portfolio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:padding="@dimen/dp5">

                <com.app.trendipeople.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp5"
                    app:customFont="@string/Roboto_Bold"
                    android:text="@string/portfolio"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_15" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow_blue" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/view_color" />

            <RelativeLayout
                android:id="@+id/rl_services"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:padding="@dimen/dp5">

                <com.app.trendipeople.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp5"
                    android:text="@string/services"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_15" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow_blue" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/view_color" />

            <RelativeLayout
                android:id="@+id/rl_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:padding="@dimen/dp5">

                <com.app.trendipeople.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp5"
                    android:text="Add Services Time"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_15" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow_blue" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/view_color" />


            <RelativeLayout
                android:id="@+id/rl_changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:padding="@dimen/dp5">

                <com.app.trendipeople.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp5"
                    android:text="@string/change_password"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_15" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow_blue" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/view_color" />


            <RelativeLayout
                android:id="@+id/rl_my_booking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:padding="@dimen/dp5"
                android:visibility="gone">

                <com.app.trendipeople.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp5"
                    android:text="@string/my_booking"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_15" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow_blue" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/view_color"
                android:visibility="gone" />


            <RelativeLayout
                android:id="@+id/rl_switch_freelancer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:padding="@dimen/dp5">

                <com.app.trendipeople.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp5"
                    android:text="@string/switch_to_user"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_15" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow_blue" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/view_color" />

            <RelativeLayout
                android:id="@+id/rl_share_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:padding="@dimen/dp5">

                <com.app.trendipeople.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp5"
                    android:text="@string/share_us"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_15" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow_blue" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/view_color" />

            <RelativeLayout
                android:id="@+id/rl_rate_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:padding="@dimen/dp5">

                <com.app.trendipeople.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp5"
                    android:text="@string/rate_us"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_15" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow_blue" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/view_color" />

            <RelativeLayout
                android:id="@+id/rl_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:padding="@dimen/dp5">

                <com.app.trendipeople.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp5"
                    android:text="@string/logout"
                    android:textColor="@color/textcolordark"
                    android:textSize="@dimen/text_size_15" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_arrow_blue" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/view_color" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>