<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/rlLoginSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp10"
            android:visibility="gone">

            <com.app.trendipeople.utils.CustomTextView
                android:id="@+id/textLoginSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/login_or_sign_up"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_15" />

            <ImageView
                android:id="@+id/rl_imagearrow"
                android:layout_width="@dimen/dp20"
                android:layout_height="@dimen/dp20"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/dp5"
                android:layout_toRightOf="@+id/textLoginSignup"
                android:src="@drawable/right_arrow_blue" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

            <RelativeLayout
                android:id="@+id/rl_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dp5">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/home_blue" />

                    <com.app.trendipeople.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/text_home"
                        android:textColor="@color/text_blue"
                        android:textSize="@dimen/text_size_12"
                        android:textStyle="bold" />

                </LinearLayout>


            </RelativeLayout>

            <View
                android:layout_width="@dimen/dp1"
                android:layout_height="match_parent"
                android:background="@color/view_color" />

            <RelativeLayout
                android:id="@+id/rl_alert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dp5">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/notification_blue" />

                    <com.app.trendipeople.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/text_alert"
                        android:textColor="@color/text_blue"
                        android:textSize="@dimen/text_size_12"
                        android:textStyle="bold" />

                </LinearLayout>


            </RelativeLayout>

            <View
                android:layout_width="@dimen/dp1"
                android:layout_height="match_parent"
                android:background="@color/view_color" />

            <RelativeLayout
                android:id="@+id/rl_wallet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dp5">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/wallet_blue" />

                    <com.app.trendipeople.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/text_wallet"
                        android:textColor="@color/text_blue"
                        android:textSize="@dimen/text_size_12"
                        android:textStyle="bold" />

                </LinearLayout>


            </RelativeLayout>

            <View
                android:layout_width="@dimen/dp1"
                android:layout_height="match_parent"
                android:background="@color/view_color" />

            <RelativeLayout
                android:id="@+id/rl_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dp5">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/profile_blue" />

                    <com.app.trendipeople.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/text_profile"
                        android:textColor="@color/text_blue"
                        android:textSize="@dimen/text_size_12"
                        android:textStyle="bold" />

                </LinearLayout>


            </RelativeLayout>

            <View
                android:layout_width="@dimen/dp1"
                android:layout_height="match_parent"
                android:background="@color/view_color" />

            <RelativeLayout
                android:id="@+id/rl_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dp5">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/message_blue" />

                    <com.app.trendipeople.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/text_message"
                        android:textColor="@color/text_blue"
                        android:textSize="@dimen/text_size_12"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_above="@+id/rl_bottom"
        android:background="@color/view_color" />

    <FrameLayout
        android:id="@+id/home_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view" />

    <FrameLayout
        android:id="@+id/alert_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view" />

    <FrameLayout
        android:id="@+id/wallet_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view" />

    <FrameLayout
        android:id="@+id/profile_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view" />

    <FrameLayout
        android:id="@+id/message_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view" />

</RelativeLayout>
